--- a/style.css
+++ b/style.css
@@ -1,24 +1,53 @@
-/*section{
-  position: absolute;
-  left: 5%;
-  left: calc(40px);
-  width: 90%;
-  width: calc(100%-80px);
-  border: solid black 1px;
-  background-color: yellow;
-  padding: 6px;
-  text-align: center;
-}*/
+/*Good job! Missing some of the content (checkboxes and half of the ingredients), fonts, margins, and alignment, but overall a good start. It probably would've been easier to set the notepad img as a background to your element holding your ingredients. Keep up the good work!*/
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+header {
+  padding-top: 30px;
+}
+
+body {
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
 ul {
   list-style: none;
   display: inline-block;
 }
+
 #top{
   display: inline-block;
 }
+
 #company{
   display: inline-block;
 }
+
+#logo{
+    font-family: 'Yellowtail', cursive;
+}
+
 #menu{
   display: inline-block;
   float: right;
@@ -44,11 +73,30 @@ ul {
   width: 400px;
   position: relative;
 }
-#image {
+
+#options label {
+  float: left;
+}
+
+#options ul {
+  margin: 0;
+  list-style: none;
+  float: left;
+}
+#options ul input{
+    float:left;
+}
+
+input[type="checkbox"] {
+ margin: 0;
+ border: 5px;
+ background: rgba(255,0,255,1)
+}
+/*#image {
   position: absolute;
   left: 0;
   top: 0;
-}
+}*/
 #text {
   z-index: 100;
   position: absolute;
@@ -56,6 +104,12 @@ ul {
   font-weight: bold;
   left: 150px;
   top: 1px;
+	-webkit-column-width: 100px; /* Chrome, Safari, Opera */
+-moz-column-width: 100px; /* Firefox */
+column-width: 100px;
+column-count: 2;
+/*column-gap: 350px;*/
+
 }
 
 #print{
