--- a/style.css
+++ b/style.css
@@ -14,13 +14,18 @@ header {
 }
 
 body {
-	margin-left: 150px;
-	margin-right: 150px;
+	margin-left: 170px;
+	margin-right: 170px;
 }
 
 ul {
 	list-style: none;
 	display: inline-block;
+}
+
+#p-text{
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 
 .top {
@@ -67,12 +72,17 @@ ul {
 
 img {
 	width: 100%;
+	margin-bottom: 30px
 }
 
 #container {
-	height: 400px;
-	width: 400px;
-	position: relative;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: hidden;
+  position: relative;
+	margin-bottom: 10px;
 }
 
 #options label {
